# crypto-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PRODUCT.md  config.toml  docker-compose.prod.yml  docker-compose.yml  skills-lock.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 139946be1c6f_agent_risk_thresholds_and_position_.py  1a2b3c4d5e6f_lifecycle_ledger.py  2c7e4a8d9f01_position_evaluation_context.py  430212a46b0a_memory_entries_create_and_backfill.py  49407193a9ac_brain_due_stadi_columns.py  4fe169988067_initial_schema.py  5adb80d611b1_eval_harness_tables.py  6c4cc097ac38_observations.py  7b8c9d0e1f2a_decision_score_reflected_at.py  (+12 more)
backend/app/: main.py
backend/tests/: conftest.py  test_analyst.py  test_analyst_orchestration.py  test_analyst_schema.py  test_api.py  test_auth.py  test_binance.py  test_binance_price_at.py  test_brain_context.py  test_brain_decide.py  test_brain_learning.py  test_brain_memory.py  test_brain_prompt.py  test_brain_providers.py  test_brain_schema.py  test_brain_trader_prompt.py  test_brain_v2_dispatch.py  test_brief_store.py  test_buy_guard.py  test_config.py  test_engine.py  test_eval_benchmarks.py  test_eval_metrics.py  test_eval_scoring.py  test_event_backfill.py  test_feeds_ingest.py  test_feeds_query.py  test_feeds_rss.py  test_feeds_symbols.py  test_health.py  test_jobs.py  test_journal.py  test_learning_job.py  test_ledger.py  test_models.py  test_models_payload.py  test_preview.py  test_runtime.py  test_scheduler_analyst.py  test_scheduler_jobs.py  (+4 more)
docs/: overview.md  (+1 more)
(+142 files in other folders)
